scrollbar fix

--- a/src/style.scss
+++ b/src/style.scss
@@ -64,6 +64,7 @@
         background-color: #7b96ec;
         color: white;
         padding: 10px;
+        font-weight: bold;
         border: none;
         cursor: pointer;
       }
@@ -110,7 +111,6 @@
 
     .sidebar {
       flex: 1;
-      border-right: 1px solid #3e3c61;
       background-color: #3e3c61;
       position: relative;
 
@@ -157,7 +157,7 @@
         }
       }
     }
-    .searchbar {
+    .search {
       border-bottom: 1px solid gray;
 
       .searchform {
@@ -233,6 +233,21 @@
         padding: 10px;
         height: calc(100% - 160px); // nice
         overflow: scroll;
+        overflow-x: hidden;
+
+        &::-webkit-scrollbar {
+          width: 10px;
+        }
+
+        &::-webkit-scrollbar-track {
+          background: #ddddf7;
+        }
+
+        &::-webkit-scrollbar-thumb {
+          background-color: #5d5b8d;
+          border-radius: 10px;
+          border: 3px solid #ddddf7;
+        }
 
         .message {
           display: flex;
@@ -319,6 +334,7 @@
             padding: 10px 15px;
             color: white;
             background-color: #8da4f1;
+            cursor: pointer;
           }
         }
       }
